datafeeder: initial openapi API proposal for upload and publishing
